# esp-reboot-manager

./: CHANGELOG.md  CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: ci.yml
examples/basic_reboot_request/: basic_reboot_request.ino
examples/busy_and_retry/: busy_and_retry.ino
examples/callback_timeout/: callback_timeout.ino
examples/guard_blocking/: guard_blocking.ino
src/: ESPRebootManager.h
src/esp_reboot_manager/: reboot_manager.cpp  reboot_manager.h
test/: CMakeLists.txt  reboot_manager_test_stubs.cpp
test/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
test/test_esp_reboot_manager/: test_esp_reboot_manager.cpp
